test/tests/compiler/16_characters_and_strings/invalid_parse/invalid_type_specifier.plx
pub fn main(none) i32 {
    # cannot combine char with any other type specifier
    # except signed and unsigned
    x: i32 char = 10
    return x
}
